--- a/views/about.ejs
+++ b/views/about.ejs
@@ -48,6 +48,7 @@
       <p><strong>Phone:</strong> <a href="tel:+918335921001">+91 8335921001</a></p>
       <p><strong>Email:</strong> <a href="mailto:mitrastarpan1999@gmail.com">mitrastarpan1999@gmail.com</a></p>
       <p><strong>Portfolio:</strong> <a href="https://mitrastarpan1999.github.io/Personal-website/" target="_blank">My Website</a></p>
+      <p><strong>Portfolio:</strong> <a href="https://github.com/mitrastarpan1999?tab=repositories" target="_blank">My Github</a></p>
     </div>
   </div>
 </section>
