--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,7 +13,7 @@
             </a>
             <span class="mb-3 mb-md-0 text-body-primary">
               © 2025 This website is designed by 
-              <a href="https://mitrastarpan1999.github.io/Personal-website/" style="color: brown;" target="_blank" rel="noopener noreferrer">Arpan Mitra</a>
+              <a href="https://arpanmitra-dev.onrender.com/" style="color: brown;" target="_blank" rel="noopener noreferrer">Arpan Mitra</a>
             </span>          
           </div>
       
@@ -26,4 +26,5 @@
         </footer>
       </div>
 </body>
+
 </html>
